# sgx-clap-test

./: Cargo.toml
.cargo/: config
src/: argh.rs  clap.rs  main.rs
