[package]
name = "sgx-clap-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[dependencies]
argh = "0.1.9"
clap = { version = "4.0.29", default-features = false,  features = ["std", "derive", "help", "usage", "error-context"] }

[package.metadata.fortanix-sgx]
heap-size = 0x10000000
stack-size = 0x100000
# Must be higher for unit tests to pass, due to threadpools
threads = 20